--- a/Carb Counter/appsettings.json
+++ b/Carb Counter/appsettings.json
@@ -8,5 +8,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "EmailServerKey": "dummy",
+  "EmailAddress": "dummy"
 }
