Added SQL Database Project
Created new database for the application to store food
data, and added Dapper for data access.

--- a/Carb Counter/appsettings.json
+++ b/Carb Counter/appsettings.json
@@ -1,6 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Carb Counter-f0900ae1-8c59-4d12-9cd4-8c01f565d7e0;Trusted_Connection=True;MultipleActiveResultSets=true"
+
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Carb Counter-f0900ae1-8c59-4d12-9cd4-8c01f565d7e0;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "CCData": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=CCDataDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "Logging": {
     "LogLevel": {
