--- a/Carb Counter/Carb Counter.csproj
+++ b/Carb Counter/Carb Counter.csproj
@@ -16,10 +16,15 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.0" />
+    <PackageReference Include="Radzen.Blazor" Version="4.3.8" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="wwwroot\lib\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CCDataManager.Library\CCDataManager.Library.csproj" />
   </ItemGroup>
 
 </Project>
