--- a/Carb Counter/appsettings.json
+++ b/Carb Counter/appsettings.json
@@ -4,11 +4,27 @@
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Carb Counter-f0900ae1-8c59-4d12-9cd4-8c01f565d7e0;Trusted_Connection=True;MultipleActiveResultSets=true",
     "CCData": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=CCDataDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "Serilog": {
+    "Using": [],
+    "MinimumLevel": {
+      "Default": "Warning",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithProcessId", "WithThreadId" ],
+    "WriteTo": [
+      { "Name": "Console" },      
+      {
+        "Name": "File",
+        "Args": {
+          "path": "C:\\temp\\log.json",
+          "rollingInterval": "Day",
+          "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact"
+        }
+      }
+    ]
   },
   "AllowedHosts": "*",
 
